--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -163,7 +163,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and X\inst{2} \and X\inst{2} \and X\inst{2} \and Kai Eckert\inst{2}}
+\author{Thomas Bosch\inst{1} \and Erman Acar\inst{2} \and Kai Eckert\inst{2}}
 %
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
@@ -172,7 +172,7 @@
 \email{thomas.bosch@gesis.org},\\ 
 \and
 University of Mannheim, Germany \\
-\email{\{kai\}@informatik.uni-mannheim.de} 
+\email{\{erman,kai\}@informatik.uni-mannheim.de} 
 }
 
 \maketitle              % typeset the title of the contribution
