--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -200,7 +200,7 @@
 \email{thomas.bosch@gesis.org},\\ 
 \and
 University of Mannheim, Germany \\
-\email{\{christian,erman,kai\}@informatik.uni-mannheim.de} 
+\email{\{erman,kai\}@informatik.uni-mannheim.de} 
 \and
 Albstadt-Sigmaringen University, Germany \\
 \email{nolle@hs-albsig.de}
