--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -224,7 +224,7 @@ Albstadt-Sigmaringen University, Germany \\
 \email{nolle@hs-albsig.de}
 \and
 University of Mannheim, Germany \\
-\email{\{christian,erman,kai\}@informatik.uni-mannheim.de} 
+\email{\{erman\}@informatik.uni-mannheim.de} 
 }
 
 \maketitle              % typeset the title of the contribution
