--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -212,7 +212,7 @@
 %                                     also used for the TOC unless
 %                                     \toctitle is used
 %
-\author{Thomas Bosch\inst{1} \and Andreas Nolle\inst{2} \and Erman Acar\inst{3} \and Kai Eckert}
+\author{Thomas Bosch\inst{1} \and Andreas Nolle\inst{2} \and Erman Acar\inst{3} \and Kai Eckert \inst{3}}
 %
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
