--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -234,14 +234,14 @@ The W3C and the DCMI working groups on RDF validation identified many RDF valida
 whereupon we initiate an RDF validation requirements database which is available to contribute at \url{http://purl.org/net/rdf-validation}.
 The intention of this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation.
 Although, there are multiple constraint languages which can be used to formulate RDF constraints (associated with these requirements), 
-there is no standard way to formulate RDF constraints.
-
-This paper serves to evaluate to which extend each requirement is satisfied by each of these constraining languages.
-We take reasoning into account as a pre-validation step and distinguish between OWL 2 QL and OWL 2 DL constructs to express particular constraints.
-We classify constraints according to a developed classification mechanism for constraints.
-We show that each constraint can be mapped to an ontology describing RDF constraints generically.
-If a constraint can be expressed in DL, we add the mapping to DL and to the generic constraint in order to logically underpin associated requirements.
-If a constraint cannot be expressed in DL, we only add the mapping to the generic constraint.
+there is no standard way to formulate them.
+This paper serves to evaluate to which extend each requirement is satisfied by each of these constraint languages.
+We take reasoning into account as an important pre-validation step and map constraints to DL
+%, and distinguish between OWL 2 QL and OWL 2 DL constructs to express particular constraints.
+%We classify constraints according to a developed classification mechanism for constraints.
+in order to show that each constraint can be mapped to an ontology describing RDF constraints generically.
+%If a constraint can be expressed in DL, we add the mapping to DL and to the generic constraint in order to logically underpin associated requirements.
+%If a constraint cannot be expressed in DL, we only add the mapping to the generic constraint.
 
 \keywords{RDF Validation, RDF Validation Requirements, RDF Constraints, Constraint Languages, Evaluation, Linked Data, Semantic Web}
 \end{abstract}
