--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -230,8 +230,8 @@ University of Mannheim, Germany \\
 
 \begin{abstract}
 There are many case studies for which the formulation of RDF constraints and the validation of RDF data conforming to these constraint is very important.  
-The W3C and the DCMI working groups on RDF validation identified many RDF validation requirements,
-whereupon we initiate an RDF validation requirements database which is available to contribute at \url{http://purl.org/net/rdf-validation}.
+By contributing to the W3C and the DCMI working groups on RDF validation, we identified many RDF validation requirements
+and initiated an RDF validation requirements database which is available to contribute at \url{http://purl.org/net/rdf-validation}.
 The intention of this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation.
 Although, there are multiple constraint languages which can be used to formulate RDF constraints (associated with these requirements), 
 there is no standard way to formulate them.
