--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -230,13 +230,12 @@ University of Mannheim, Germany \\
 
 \begin{abstract}
 There are many case studies for which the formulation of RDF constraints and the validation of RDF data conforming to these constraint is very important.  
-The W3C and the DCMI working groups on RDF validation identified many RDF validation requirements,
-whereupon we initiate an RDF validation requirements database which is available to contribute at \url{http://purl.org/net/rdf-validation}.
-The intention of this database is to collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation.
+The W3C and the DCMI working groups on RDF validation identified many RDF validation requirements. To collaboratively collect case studies, use cases, requirements, and solutions regarding RDF validation, we initiated a publicly open database of RDF validation requirements  (\url{http://purl.org/net/rdf-validation}).
+The intention of this database .
 Although, there are multiple constraint languages which can be used to formulate RDF constraints (associated with these requirements), 
 there is no standard way to formulate RDF constraints.
 
-This paper serves to evaluate to which extend each requirement is satisfied by each of these constraining languages.
+This paper serves to evaluate to which extend each requirement is satisfied by each of these constrain languages.
 We take reasoning into account as a pre-validation step and distinguish between OWL 2 QL and OWL 2 DL constructs to express particular constraints.
 We classify constraints according to a developed classification mechanism for constraints.
 We show that each constraint can be mapped to an ontology describing RDF constraints generically.
@@ -251,8 +250,7 @@ If a constraint cannot be expressed in DL, we only add the mapping to the generi
 
 \section{Introduction}
 
-The purpose of ontologies is to perform reasoning on RDF data and not to validate RDF data conforming to these ontologies.
-For RDF, we cannot use ontologies like we use XML Schemas, DTDs, RELAX NG, or Schematron to validate XML documents.
+
 The W3C organized the RDF Validation Workshop\footnote{\url{http://www.w3.org/2012/12/rdf-val/}}, 
 where experts from industry, government, and academia discussed first use cases for RDF constraint formulation and validation.
 In 2014, two working groups on RDF validation have been established: 
