--- a/paper/RDF validation requirements/RDF validation requirements.tex
+++ b/paper/RDF validation requirements/RDF validation requirements.tex
@@ -260,9 +260,9 @@ The intention associated with this database is to collaboratively collect case s
 The requirements are classified to better evaluate existing solutions. 
 We mapped each requirement to formulate RDF constraints directly to an RDF constraint.
 
-There is no constraint language which can be seen as the standard.
-Although, there are multiple constraint languages (having different syntaxes and semantics) which can be used to express RDF constraints, such as existential and universal quantification, cardinality restrictions, and exclusive or of properties.
-The five most promising ones on being the standard are
+There is no constraint language which can be seen as the standalone standard.
+However, there are multiple constraint languages (each having its own  syntax and semantics) which can be used to express RDF constraints, such as existential and universal quantification, cardinality restrictions, and exclusive-or of properties.
+The five popular constraint languages are 
 Description Set Profiles (DSP)\footnote{\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
 Resource Shapes (ReSh)\footnote{\url{http://www.w3.org/Submission/shapes/}}, 
 Shape Expressions (ShEx)\footnote{\url{http://www.w3.org/Submission/shex-primer/}},
